# electionchecker

./: Cargo.toml  README.md
data/: uitslag_EP20190523_Nederland.csv  uitslag_EP20240606_Nederland.csv  uitslag_ER20190320_Bonaire.csv  uitslag_ER20190320_Saba.csv  uitslag_ER20201021_Sint Eustatius.csv  uitslag_ER20230315_Bonaire.csv  uitslag_GR20180321_Gemeente.csv  uitslag_GR20181121_Gemeente.csv  uitslag_GR20201118_Gemeente.csv  uitslag_GR20211124_Gemeente.csv  uitslag_GR20220316_Gemeente.csv  uitslag_GR20221123_Gemeente.csv  uitslag_PS20190320_Drenthe.csv  uitslag_PS20190320_Flevoland.csv  uitslag_PS20190320_Fryslân.csv  uitslag_PS20190320_Gelderland.csv  uitslag_PS20190320_Groningen.csv  uitslag_PS20190320_Limburg.csv  uitslag_PS20190320_Noord-Brabant.csv  uitslag_PS20190320_Noord-Holland.csv  uitslag_PS20190320_Overijssel.csv  uitslag_PS20190320_Utrecht.csv  uitslag_PS20190320_Zeeland.csv  uitslag_PS20190320_Zuid-Holland.csv  uitslag_TK19180702_Nederland.csv  uitslag_TK19220705_Nederland.csv  uitslag_TK19250701_Nederland.csv  uitslag_TK19290703_Nederland.csv  uitslag_TK19330426_Nederland.csv  uitslag_TK19370526_Nederland.csv  uitslag_TK19460517_Nederland.csv  uitslag_TK19480707_Nederland.csv  uitslag_TK19520625_Nederland.csv  uitslag_TK19560613_Nederland.csv  uitslag_TK19590312_Nederland.csv  uitslag_TK19630515_Nederland.csv  uitslag_TK19670215_Nederland.csv  uitslag_TK19710428_Nederland.csv  uitslag_TK19721129_Nederland.csv  uitslag_TK20170315_Nederland.csv  (+24 more)
src/: data.rs  lib.rs  main.rs
