[package]
name = "kiesraad-model"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
csv = { version = "1.3.1", optional = true }
clap = { version = "4.5", features = ["derive"] }

[features]
default = ["rand-validate", "lawful", "whole-seat-opt"]
chatty = []
validate = ["dep:csv"]
rand-validate = ["validate"]
nice-frac = []
succinct-chatty = ["chatty"]
whole-seat-opt = []
lawful = []
